# robotics_research

./: .gitignore  README.md  aidin_test.py  aljnu_mp.usd  camera1_extrinsic.yaml  camera2_extrinsic.yaml  camera3_extrinsic.yaml  multi_camera_calibration.yaml  straight_planner.py
QP/: cam_640480.txt  cam_start.txt  camera1_extrinsic.yaml  camera2_extrinsic.yaml  camera3_extrinsic.yaml  execute.txt  forward_kinematics.py  jacobian_v1.py  (+18 more)
QP/vision_part/: 3_cameras.py  3_cameras_calib.py  aruco_position_comparison.py  camera_calib_ros2.py  camera_calib_test.py  camera_extrinsic_calibrator.py  cameras_graph.py  charuco_stereo_calib_module.py  d435_aruco_detector.py  d435_aruco_detector2.py  d435_aruco_detector_kalman.py  d435_aruco_detector_obo.py  d435_aruco_marker_outside.py  d435_aruco_marker_outside2.py  d435_aruco_marker_outside_final.py  d435_aruco_test.py  d435_one_aruco_detector.py  d435_one_aruco_detector_estimate.py  d435_three_cameras.py  d435_three_cameras_extrinsic.py  d435_three_cameras_extrinsic_final.py  d435_three_cameras_update.py  d435_two_aruco_detector.py  d435_two_cameras.py  d435_twoofthem.py  hand_mediapipe.py  hand_red_zed.py  hand_zed.py  hand_zed_minimize.py  multicam_aruco.py  multicam_aruco2.py  multicam_check.py  multicam_circle.py  multicam_circle_auto.py  multicam_circle_precision.py  multicam_circle_precision2.py  multicam_world.py  multicam_world2.py  multicam_world_cam2.py  multicam_world_cam2_pub.py  (+9 more)
QP/vision_part/stereo_calibration_results/: H_camera1_camera2_current.yaml  H_camera1_camera3_current.yaml  H_camera2_camera3_current.yaml
(+213 files in other folders)
